<resources>
    <string name="splash_description">Trojan Planner welcome page logo</string>
    <string name="welcomeText">Welcome to Trojan Planner</string>
    <string name="welcomeSubtext">Connecting You to Unforgettable Events!</string>
    <string name="app_name">TrojanPlanner</string>
    <string name="title_events">MyEvents</string>
    <string name="title_qr">QR Scanner</string>
    <string name="title_profile">Profile</string>
    <string name="admin_home">Home</string>
    <string name="admin_facilities">Facilities</string>
    <string name="admin_users">Users</string>
    <string name="admin_images">Images</string>
    <string name="admin_qr">QR</string>

    <string name="firebase_storage_upload_success">Storage upload successful!</string>
    <string name="firebase_storage_upload_fail">Storage upload failed, try again later</string>

    <string name="firestore_db_upload_success">Document upload successful!</string>
    <string name="firestore_db_upload_fail">Document upload failed, try again later</string>


    <string-array name="event_options">
        <item>Show Check-In Code</item>
        <item>Generate Event Code</item>
        <item>Send Announcement</item>
        <item>View Waiting List</item>
        <item>View Enrolled Entrants</item>
        <item>View Cancelled Entrants</item>
        <item>View Invited Entrants</item>
        <item>Initiate Lottery</item>
        <item>View Map of Entrants</item>
    </string-array>

    <!-- Spinner options -->
    <string-array name="notification_types">
        <item>Current Waitlist</item>
        <item>Invited Entrants</item>
        <item>Enrolled Entrants</item>
        <item>Cancelled Entrants</item>
    </string-array>
</resources>