<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    android:id="@+id/profile_fragment_parent"
    >

    <ImageView
        android:layout_width="145dp"
        android:layout_height="149dp"
        android:layout_gravity="center"
        android:layout_marginTop="52dp"
        android:background="@drawable/circle_shape"
        android:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Profile Picture (in front) -->
    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="133dp"
        android:layout_height="133dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@drawable/circle_shape"
        android:contentDescription="Profile Picture"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder_avatar"
        android:clipToOutline="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="331dp"
        android:layout_height="42dp"
        android:layout_marginTop="36dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastname_input" />

    <TextView
        android:layout_width="343dp"
        android:layout_height="16dp"
        android:layout_marginBottom="4dp"
        android:alpha="0.7"
        android:fontFamily="sans-serif-medium"
        android:text="First Name:"
        android:textColor="@color/trojanRed"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/firstname_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="343dp"
        android:layout_height="16dp"
        android:layout_marginBottom="4dp"
        android:alpha="0.7"
        android:fontFamily="sans-serif-medium"
        android:text="Last Name:"
        android:textColor="@color/trojanRed"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lastname_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="343dp"
        android:layout_height="16dp"
        android:layout_marginBottom="4dp"
        android:alpha="0.7"
        android:fontFamily="sans-serif-medium"
        android:text="Email:"
        android:textColor="@color/trojanRed"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/email_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="343dp"
        android:layout_height="16dp"
        android:layout_marginBottom="4dp"
        android:alpha="0.7"
        android:fontFamily="sans-serif-medium"
        android:text="Phone Number:"
        android:textColor="@color/trojanRed"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/phone_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/firstname_input"
        android:layout_width="331dp"
        android:layout_height="42dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <EditText
        android:id="@+id/phone_input"
        android:layout_width="331dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input" />

    <EditText
        android:id="@+id/lastname_input"
        android:layout_width="331dp"
        android:layout_height="42dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstname_input" />


    <Button
        android:id="@+id/cancel_button"
        android:layout_width="153dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="168dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/red_primary"
        android:elevation="4dp"
        android:fontFamily="sans-serif-medium"
        android:padding="12dp"
        android:text="Cancel"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_input"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="160dp"
        android:layout_height="52dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_button"
        android:elevation="4dp"
        android:fontFamily="sans-serif-medium"
        android:padding="12dp"
        android:text="Save"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/cancel_button"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_input" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:padding="8dp"
        android:text="Disable Organizers/Admins Notifications"
        android:textColor="@color/red_primary"
        android:textSize="16sp"
        android:thumbTint="@color/trojanRed"
        android:trackTint="@color/darkGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancel_button" />

    <Button
        android:id="@+id/switch_profile_facility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:fontFamily="sans-serif-medium"
        android:text="Manage Facility Profile"
        app:layout_constraintBottom_toTopOf="@+id/switch_admin_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />

    <Button
        android:id="@+id/switch_admin_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:fontFamily="sans-serif-medium"
        android:text="Switch to Admin View"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>